--- a/Aliento App/Presentation/Features/ImageViewer/FullScreenImageVC.xib
+++ b/Aliento App/Presentation/Features/ImageViewer/FullScreenImageVC.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FullScreenNotificationVC" customModule="Aliento_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FullScreenImageVC" customModule="Aliento_App" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="iN0-l3-epB" id="PNd-e8-ClV"/>
             </connections>
