--- a/Aliento App/Presentation/Features/Settings/SettingsVC.xib
+++ b/Aliento App/Presentation/Features/Settings/SettingsVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,8 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsVC" customModule="Aliento_App" customModuleProvider="target">
             <connections>
-                <outlet property="notificationsPush" destination="sJS-gS-Q9C" id="6aR-DB-0j8"/>
                 <outlet property="switchDarkMode" destination="4Fm-MD-Ut9" id="cyx-Sm-EMa"/>
+                <outlet property="switchNotifications" destination="sJS-gS-Q9C" id="ALK-mu-V1B"/>
                 <outlet property="view" destination="iN0-l3-epB" id="0eK-0W-Nik"/>
             </connections>
         </placeholder>
@@ -22,31 +22,34 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Configuración" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nVg-As-6Af">
-                    <rect key="frame" x="16" y="60" width="382" height="21"/>
+                    <rect key="frame" x="16" y="64" width="382" height="21"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tema Oscuro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQr-XF-wGS">
-                    <rect key="frame" x="16" y="113" width="101" height="21"/>
+                    <rect key="frame" x="16" y="117" width="101" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notificaciones Push" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dlj-FQ-LGb">
-                    <rect key="frame" x="16" y="166" width="151" height="21"/>
+                    <rect key="frame" x="16" y="170" width="151" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Fm-MD-Ut9">
-                    <rect key="frame" x="349" y="113" width="51" height="31"/>
+                    <rect key="frame" x="349" y="117" width="51" height="31"/>
                     <connections>
                         <action selector="darkModeSwitch:" destination="-1" eventType="valueChanged" id="YhN-VU-QlI"/>
                     </connections>
                 </switch>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sJS-gS-Q9C">
-                    <rect key="frame" x="349" y="160" width="51" height="31"/>
+                    <rect key="frame" x="349" y="164" width="51" height="31"/>
+                    <connections>
+                        <action selector="notificationsPush:" destination="-1" eventType="valueChanged" id="ZSE-bR-yCN"/>
+                    </connections>
                 </switch>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
